syntax = "proto3";

option csharp_namespace = "Hades.Shared";

package Beta;

service Beta {
	rpc AddBeta(AddBetaRequest) returns (AddBetaResponse);
	rpc GetBeta(GetBetaRequest) returns (GetBetaResponse);
	rpc GetBetaStream(GetBetaRequest) returns (stream BetaDto);
}

message AddBetaRequest {
	string id = 1;
	repeated BetaDto data = 2;
}

message AddBetaResponse {
	string id = 1;
}

message GetBetaRequest {
	string id = 1;
}

message GetBetaResponse {
	string id = 1;
	repeated BetaDto data = 2;
}

message BetaDto {
	int32 id = 1;
	string data = 2;
}